Support Rotation flag in MP4
We don't support the rotation flag that QuickTime can use for it's files. It seems the iPhone 3Gs makes a lot of use of this flag when encoding video.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
Example file: http://regmedia.co.uk/2009/06/22/underground_train.mov
Forum post: http://forum.videolan.org/viewtopic.php?f=2&t=61171
http://sites.google.com/site/aawood/examples.zip good testing material.
- Jean-Baptiste Kempf changed title from Rotation flag to Support Rotation flag in MP4
changed title from Rotation flag to Support Rotation flag in MP4
- Felix Paul Kühne changed milestone to %Features paradize
changed milestone to %Features paradize
commit a3f11b7f Author: Jean-Baptiste Kempf jb@videolan.org Date: Tue Jan 10 00:42:26 2012 +0100
MP4: debug the Matrix parameters for the tkhd atom Ref [#2882](https://code.videolan.org/videolan/vlc/-/issues/2882)
Original author: jb@videolan.org
- Jean-Baptiste Kempf added Type::feature label
added Type::feature label
commit aec33d68 Author: Matthias Keiser matthias@tristan-inc.com Date: Mon Feb 17 01:32:20 2014 +0100
Avformat: Support rotation information Notably for mp4 Ref [#2882](https://code.videolan.org/videolan/vlc/-/issues/2882)
Original author: matthias@tristan-inc.com
- Jean-Baptiste Kempf added Status::fixed label
added Status::fixed label
- Jean-Baptiste Kempf changed milestone to %2.2.0
changed milestone to %2.2.0
- Jean-Baptiste Kempf closed
closed
- Jean-Baptiste Kempf added Component::Demuxers: MP4 label
added Component::Demuxers: MP4 label
- Felix Paul Kühne mentioned in issue #4666 (closed)
mentioned in issue #4666 (closed)
- Felix Paul Kühne mentioned in issue #6422 (closed)
mentioned in issue #6422 (closed)
- Felix Paul Kühne mentioned in issue #7705 (closed)
mentioned in issue #7705 (closed)
- Felix Paul Kühne mentioned in issue #11229 (closed)
mentioned in issue #11229 (closed)
- Jean-Baptiste Kempf marked #4666 (closed) as a duplicate of this issue
marked #4666 (closed) as a duplicate of this issue
- Jean-Baptiste Kempf marked this issue as related to #4666 (closed)
marked this issue as related to #4666 (closed)