MP4: debug the Matrix parameters for the tkhd atom

Ref #2882